retextured meteorite items and added volcanic lantern

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ minecraft_version=1.21.1
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.21,1.21.1)
 # The Neo version must agree with the Minecraft version to get a valid artifact
-neo_version=21.1.4
+neo_version=21.1.15
 # The Neo version range can use any version of Neo as bounds
 neo_version_range=[21.0.148,)
 # The loader version range can only use the major version of FML as bounds
@@ -28,7 +28,7 @@ jei_version=19.8.4.113
 mod_id=structureful
 mod_name=Structureful
 mod_license=MIT
-mod_version=0.2.1
+mod_version=0.2.2
 mod_group_id=com.b04ka.structureful
 mod_authors=b04ka
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_description=Small useful structures.
